update: data_preprocessing.ipynb - Create pipeline to centralize all transformation steps - Def process_emojis - Improve interation to process issues and its comments right away

--- a/src/preprocessing/data_preprocessing.ipynb
+++ b/src/preprocessing/data_preprocessing.ipynb
@@ -2,56 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
-    "import psycopg2"
+    "import psycopg2\n",
+    "import emoji"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_images(text):\n",
-    "    text = re.sub(r'!\\[Image\\]\\S*', '<user sent a image>', text)\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_urls(text):\n",
-    "    text = re.sub(r'http\\S+|www\\.\\S+', '<user sent a url>', text)\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_code_blocks(text):\n",
-    "    text = re.sub(r'```(.*?)```', '<user sent a code block>', text, flags=re.DOTALL)\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "def process_images(text):\n",
+    "    text = re.sub(r'!\\[Image\\]\\S*', '<IMAGE>', text)\n",
+    "    return text\n",
+    "\n",
+    "def process_urls(text):\n",
+    "    text = re.sub(r'http\\S+|www\\.\\S+', '<URL>', text)\n",
+    "    return text\n",
+    "\n",
+    "def process_code_blocks(text):\n",
+    "    text = re.sub(r'```(.*?)```', '<CODE_BLOCK>', text, flags=re.DOTALL)\n",
+    "    return text\n",
+    "\n",
     "def process_reply(text):\n",
     "    text = re.sub(r'(>.)(.*)', r'<user is replying to: \\2 >', text)\n",
-    "    return text"
+    "    return text\n",
+    "\n",
+    "def process_emojis(text):\n",
+    "    text = emoji.demojize(text, delimiters=(\"<emoji_\", \">\"))\n",
+    "    return text\n",
+    "\n",
+    "def create_pipeline(functions):\n",
+    "    def pipeline(text):\n",
+    "        for func in functions:\n",
+    "            text = func(text)\n",
+    "        return text\n",
+    "    return pipeline\n"
    ]
   },
   {
@@ -60,45 +51,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repo_owner = \"microsoft\"\n",
-    "repo_name = \"vscode\"\n",
-    "\n",
+    "pipeline_functions = [process_code_blocks, process_images, process_urls, process_emojis]\n",
+    "pipeline = create_pipeline(pipeline_functions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "DATABASE_CONFIG = {\n",
-    "    \"dbname\": \"vscode_data\",\n",
+    "    \"dbname\": \"tensorflow_data\",\n",
     "    \"user\": \"postgres\",\n",
     "    \"password\": \"\",\n",
     "    \"host\": \"\",\n",
     "    \"port\": 5432,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "}\n",
+    "\n",
     "conn = psycopg2.connect(**DATABASE_CONFIG)\n",
     "cursor = conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cursor.execute(\n",
     "    \"\"\"\n",
     "    SELECT \n",
-    "        comment_id,\n",
-    "        created_at,\n",
+    "        issue_id,\n",
     "        body\n",
     "    FROM \n",
-    "        issue_comments_from_release\n",
+    "        issues_from_release\n",
+    "    WHERE\n",
+    "        release_number LIKE '%2.18%'\n",
     "    \"\"\"\n",
     ")\n",
-    "comments = cursor.fetchall()"
+    "issues = cursor.fetchall()\n",
+    "len(issues)"
    ]
   },
   {
@@ -107,16 +111,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for comment in comments:\n",
-    "    comment_id, created_at, body = comment\n",
-    "    body = remove_code_blocks(body)\n",
-    "    body = remove_images(body)\n",
-    "    body = remove_urls(body)\n",
-    "    body = process_reply(body)\n",
-    "    print(body)\n",
+    "for issue in issues:\n",
+    "    issue_id, issue_body = issue\n",
+    "    \n",
+    "    # Process the body of the issue\n",
+    "    issue_body = pipeline(issue_body)\n",
+    "    \n",
+    "    # Save the processed issue body \n",
     "    cursor.execute(\n",
-    "        \"UPDATE issue_comments_from_release SET body = %s WHERE comment_id = %s\", (body, comment_id)\n",
+    "        \"UPDATE issues_from_release SET body = %s WHERE issue_id = %s\", (issue_body, issue_id)\n",
     "    )\n",
+    "\n",
+    "    # Getting the comments of the current issue\n",
+    "    cursor.execute(\n",
+    "        \"\"\"\n",
+    "        SELECT \n",
+    "            comment_id,\n",
+    "            body\n",
+    "        FROM \n",
+    "            issue_comments_from_release\n",
+    "        WHERE \n",
+    "            issue_id = %s;\n",
+    "        \"\"\", (issue_id,)\n",
+    "    )\n",
+    "    comments = cursor.fetchall()\n",
+    "    print(f\"Found {len(comments)} comments for issue {issue_id}.\")\n",
+    "\n",
+    "    # Processing the body of each comment\n",
+    "    for comment in comments:\n",
+    "        comment_id, comment_body = comment\n",
+    "\n",
+    "        # Process de body of the comment\n",
+    "        comment_body = pipeline(comment_body)\n",
+    "\n",
+    "        # Save the processed comment body\n",
+    "        cursor.execute(\n",
+    "            \"UPDATE issue_comments_from_release SET body = %s WHERE comment_id = %s\",\n",
+    "            (comment_body, comment_id,)\n",
+    "        )\n",
     "\n",
     "conn.commit()  "
    ]
