update: data_preprocessing Add try/except blocks in the functions

--- a/src/preprocessing/data_preprocessing.ipynb
+++ b/src/preprocessing/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,28 +13,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_images(text):\n",
-    "    text = re.sub(r'!\\[Image\\]\\S*', '<IMAGE>', text)\n",
+    "    try:\n",
+    "        text = re.sub(r'!\\[Image\\]\\S*', '<IMAGE>', text)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Unexpected error occurred: {e}\")\n",
     "    return text\n",
     "\n",
     "def process_urls(text):\n",
-    "    text = re.sub(r'http\\S+|www\\.\\S+', '<URL>', text)\n",
+    "    try:\n",
+    "        text = re.sub(r'http\\S+|www\\.\\S+', '<URL>', text)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Unexpected error occurred: {e}\")\n",
     "    return text\n",
     "\n",
     "def process_code_blocks(text):\n",
-    "    text = re.sub(r'```(.*?)```', '<CODE_BLOCK>', text, flags=re.DOTALL)\n",
+    "    try:\n",
+    "        text = re.sub(r'```(.*?)```', '<CODE_BLOCK>', text, flags=re.DOTALL)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Unexpected error occurred: {e}\")\n",
     "    return text\n",
     "\n",
     "def process_reply(text):\n",
-    "    text = re.sub(r'(>.)(.*)', r'<user is replying to: \\2 >', text)\n",
+    "    try:\n",
+    "        text = re.sub(r'(>.)(.*)', r'<user is replying to: \\2 >', text)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Unexpected error occurred: {e}\")\n",
     "    return text\n",
     "\n",
     "def process_emojis(text):\n",
-    "    text = emoji.demojize(text, delimiters=(\"<emoji_\", \">\"))\n",
+    "    try:\n",
+    "        text = emoji.demojize(text, delimiters=(\"<emoji_\", \">\"))\n",
+    "    except Exception as e:\n",
+    "        print(f\"Unexpected error occurred: {e}\")\n",
     "    return text\n",
     "\n",
     "def create_pipeline(functions):\n",
@@ -75,20 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "78"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cursor.execute(\n",
     "    \"\"\"\n",
@@ -98,7 +102,7 @@
     "    FROM \n",
     "        issues_from_release\n",
     "    WHERE\n",
-    "        release_number LIKE '%2.18%'\n",
+    "        release_number LIKE '%2.16%'\n",
     "    \"\"\"\n",
     ")\n",
     "issues = cursor.fetchall()\n",
@@ -135,13 +139,14 @@
     "        \"\"\", (issue_id,)\n",
     "    )\n",
     "    comments = cursor.fetchall()\n",
-    "    print(f\"Found {len(comments)} comments for issue {issue_id}.\")\n",
+    "    # print(f\"Found {len(comments)} comments for issue {issue_id}.\")\n",
     "\n",
     "    # Processing the body of each comment\n",
     "    for comment in comments:\n",
     "        comment_id, comment_body = comment\n",
     "\n",
     "        # Process de body of the comment\n",
+    "        print(f\"Processing comment {comment_id}...\")\n",
     "        comment_body = pipeline(comment_body)\n",
     "\n",
     "        # Save the processed comment body\n",
@@ -150,7 +155,8 @@
     "            (comment_body, comment_id,)\n",
     "        )\n",
     "\n",
-    "conn.commit()  "
+    "conn.commit()  \n",
+    "print(f\"Alterations successfully saved!\")"
    ]
   }
  ],
