--- a/src/preprocessing/count_tokens.ipynb
+++ b/src/preprocessing/count_tokens.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "78"
+       "305"
       ]
      },
      "execution_count": 2,
@@ -45,7 +45,7 @@
     "    FROM \n",
     "        issues_from_release\n",
     "    WHERE \n",
-    "        release_number LIKE '%2.18%';\n",
+    "        release_number LIKE '%2.12%';\n",
     "    \"\"\"\n",
     ")\n",
     "issues = cursor.fetchall()\n",
@@ -66,16 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of issues: 78\n",
-      "Number of comments: 409\n",
-      "Number of tokens: 63182\n"
+      "Number of issues: 305\n",
+      "Number of comments: 2442\n",
+      "Number of tokens: 182134\n"
      ]
     }
    ],
@@ -122,6 +122,16 @@
     "print(f\"Number of issues: {num_issues}\")\n",
     "print(f\"Number of comments: {num_comments}\")\n",
     "print(f\"Number of tokens: {num_tokens}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.close()\n",
+    "conn.close()"
    ]
   }
  ],
